# lfr-cli

./: .gitignore  Cargo.toml  Makefile  README.md  example.env  sample.env
.github/workflows/: cicd.yml  release.yml
docs/templates/: LFR Admin Docs.docx  LFR Student Docs.docx
src/: lib.rs  main.rs
